* marks an incompatible change


  o new option -e for "why3session latex" allows to specify when to
    split tables in parts

version 0.72, May 11, 2012
==========================
  o [Coq] new tactic "why3" to call external provers as oracles
  o [Coq output] new feature: theory realizations (see manual, chapter 9)
  o new tool why3session (see manual, section 6.7)
  o new tool why3doc (see manual, section 6.8)
  o support for multiple versions of the same prover (see manual, section 5.5)
  o [why3ide] new features, including prover upgrade, alternate editors
  o complete support for limiting provers' memory usage
  o improved support on Microsoft Windows
  o fix BTS 14221
  o fix BTS 14190
  o fix BTS 12457
  o fix BTS 13854
  o fix BTS 13849
  o [syntax] new syntax "constant x:ty" and "constant x:ty = e" to
    introduce constants, as an alternative to "function"
  o [TPTP] new parser for TPTP files with support for the newest
    TFA1 format (TPTP with polymorphic types and arithmetic)
  o [API] Dtype declaration kind is split into two: Dtype for
    declarations of a single abstract type or type alias, and
    Ddata for a list of (mutually recursive) algebraic types.
    Similarly, Dlogic declaration kind is split into Dparam for
    a single abstract function/predicate symbol and Dlogic for
    a list of (mutually recursive) defined symbols.

version 0.71, October 13, 2011
==============================

  o [examples] a lot of new program examples in directory examples/programs
  o [Why3replayer] new option -latex to output a proof session in LaTeX format
  o [WhyML] significant improvement of the efficiency of the WP calculus
  o [WhyIDE] better coloring and source positioning including from front-ends
    such as Krakatoa and Jessie plugin of Frama-C
  o [WhyML] fixed labels and source locations in WPs
  o [Session] during reload, new method for pairing old and new subgoals
    based on goal shapes, stored in database.