@@ -147,10 +147,11 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
           <keyword>abstract</keyword>
           <keyword>axiom</keyword>
           <keyword>clone</keyword>
+          <keyword>coinductive</keyword>
+          <keyword>constant</keyword>
           <keyword>end</keyword>
           <keyword>exception</keyword>
           <keyword>export</keyword>
-          <keyword>constant</keyword>
           <keyword>function</keyword>
           <keyword>goal</keyword>
           <keyword>ghost</keyword>
