@@ -358,9 +358,13 @@ let print_ind fmt (pr,f) =
   fprintf fmt "@[<hov 4>| %a%a :@ %a@]"
     print_pr pr print_ident_labels pr.pr_name print_term f
 
-let print_ind_decl fst fmt (ps,bl) =
+let ind_sign = function
+  | Ind   -> "inductive"
+  | Coind -> "coinductive"
+
+let print_ind_decl s fst fmt (ps,bl) =
   fprintf fmt "@[<hov 2>%s %a%a%a =@ @[<hov>%a@]@]"
-    (if fst then "inductive" else "with") print_ls ps
+    (if fst then ind_sign s else "with") print_ls ps
     print_ident_labels ps.ls_name
     (print_list nothing print_ty_arg) ps.ls_args
     (print_list newline print_ind) bl;
@@ -390,15 +394,15 @@ let print_decl fmt d = match d.d_node with
   | Ddata tl  -> print_list_next newline print_data_decl fmt tl
   | Dparam ls -> print_param_decl fmt ls
   | Dlogic ll -> print_list_next newline print_logic_decl fmt ll
-  | Dind il   -> print_list_next newline print_ind_decl fmt il
+  | Dind (s, il) -> print_list_next newline (print_ind_decl s) fmt il
   | Dprop p   -> print_prop_decl fmt p
 
 let print_next_data_decl  = print_data_decl false
 let print_data_decl       = print_data_decl true
 let print_next_logic_decl = print_logic_decl false
 let print_logic_decl      = print_logic_decl true
-let print_next_ind_decl   = print_ind_decl false
-let print_ind_decl        = print_ind_decl true
+let print_next_ind_decl   = print_ind_decl Ind false
+let print_ind_decl fmt s  = print_ind_decl s true fmt
 
 let print_inst_ts fmt (ts1,ts2) =
   fprintf fmt "type %a = %a" print_ts ts1 print_ts ts2
