@@ -80,7 +80,7 @@ val add_ty_decl : task -> tysymbol -> task
 val add_data_decl : task -> data_decl list -> task
 val add_param_decl : task -> lsymbol -> task
 val add_logic_decl : task -> logic_decl list -> task
-val add_ind_decl : task -> ind_decl list -> task
+val add_ind_decl : task -> ind_sign -> ind_decl list -> task
 val add_prop_decl : task -> prop_kind -> prsymbol -> term -> task
 
 (** {2 utilities} *)
