@@ -140,7 +140,7 @@ val add_ty_decl : theory_uc -> tysymbol -> theory_uc
 val add_data_decl : theory_uc -> data_decl list -> theory_uc
 val add_param_decl : theory_uc -> lsymbol -> theory_uc
 val add_logic_decl : theory_uc -> logic_decl list -> theory_uc
-val add_ind_decl : theory_uc -> ind_decl list -> theory_uc
+val add_ind_decl : theory_uc -> ind_sign -> ind_decl list -> theory_uc
 val add_prop_decl : theory_uc -> prop_kind -> prsymbol -> term -> theory_uc
 
 (** Use *)
