@@ -204,7 +204,8 @@ let add_ty_decl = add_to_theory Theory.add_ty_decl
 let add_data_decl = add_to_theory Theory.add_data_decl
 let add_param_decl = add_to_theory Theory.add_param_decl
 let add_logic_decl = add_to_theory Theory.add_logic_decl
-let add_ind_decl = add_to_theory Theory.add_ind_decl
+let add_ind_decl uc s dl =
+  { uc with muc_theory = Theory.add_ind_decl uc.muc_theory s dl }
 let add_prop_decl uc k pr f =
   { uc with muc_theory = Theory.add_prop_decl uc.muc_theory k pr f }
 
