@@ -1,6 +1,7 @@
 * marks an incompatible change
 
 
+  o co-inductive predicates
   o new option -e for "why3session latex" allows to specify when to
     split tables in parts
 
